chore: drivers lambdas and services and unit and integration tests
